--- a/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
+++ b/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
@@ -1,3 +1,64 @@
-<p>
-  event-plan-list works!
-</p>
+<div class="action-group">
+    <a [routerLink]="['/event-plan/add']" routerLinkActive="router-link-active" mat-raised-button><mat-icon>insert_drive_file</mat-icon> New Event Plan</a>
+  </div>
+
+  <div fxLayout fxLayoutAlign="start center" fxLayoutGap="10px" class="standard-filter">
+    <mat-form-field *ngIf="selectedFilter.queryType === 'string'">
+      <input matInput [(ngModel)]="queryModel.searchText" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Filter">
+    </mat-form-field>
+    <div class="number-form-fields" *ngIf="selectedFilter.queryType === 'number'">
+      <mat-form-field>
+        <input matInput [(ngModel)]="queryModel.min" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Min">
+      </mat-form-field>
+      <mat-form-field>
+        <input matInput [(ngModel)]="queryModel.max" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Max">
+      </mat-form-field>
+    </div>
+    <mat-form-field>
+      <mat-label>Type</mat-label>
+      <mat-select [(ngModel)]="selectedFilter" (valueChange)="onChangeFilter($event)">
+        <mat-option *ngFor="let item of filterList" [value]="item">{{ item.display }}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-raised-button type="button" color="primary" (click)="applyFilter(queryModel)">Search</button>
+    <button fxFlexOffset="auto" mat-raised-button type="button" color="primary" (click)="applyFilter(queryModel)">Refresh</button>
+  </div>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table" (matSortChange)="sortData($event)">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="totalBudgetAmount">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Price (RM) </th>
+      <td mat-cell *matCellDef="let item"> {{item.price}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="remarks">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Remarks </th>
+      <td mat-cell *matCellDef="let item"> {{item.remarks}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="audit.updatedDate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated </th>
+      <td mat-cell *matCellDef="let item"> {{item.audit.updatedDate | date: 'hh:mm a, dd-MM-yyyy'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let item">
+        <div class="btn-group" *ngIf="isAuth">
+            <button mat-stroked-button [routerLink]="['/event-plan/edit', item._id]" routerLinkActive="router-link-active"><mat-icon>edit</mat-icon> Edit</button>
+            <button mat-stroked-button color="warn" (click)="delete(item)"><mat-icon>delete</mat-icon> Delete</button>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [length]="totalItems" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+
+
