--- a/ng-app/src/app/product/product-list/product-list.component.html
+++ b/ng-app/src/app/product/product-list/product-list.component.html
@@ -1,17 +1,22 @@
 <div class="action-group">
-  <a [routerLink]="['/product/add']" routerLinkActive="router-link-active" mat-raised-button><mat-icon>insert_drive_file</mat-icon> New Product</a>
+  <a [routerLink]="['/product/add']" routerLinkActive="router-link-active" mat-raised-button>
+    <mat-icon>insert_drive_file</mat-icon> New Product
+  </a>
 </div>
 
-<div fxLayout fxLayoutAlign="start center" class="standard-filter">
+<div fxLayout fxLayoutAlign="start center" fxLayoutGap="10px" class="standard-filter">
   <mat-form-field *ngIf="selectedFilter.queryType === 'string'">
-    <input matInput [(ngModel)]="queryModel.searchText" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Filter">
+    <input matInput [(ngModel)]="queryModel.searchText" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
+      placeholder="Filter">
   </mat-form-field>
   <div class="number-form-fields" *ngIf="selectedFilter.queryType === 'number'">
     <mat-form-field>
-      <input matInput [(ngModel)]="queryModel.min" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Min">
+      <input matInput [(ngModel)]="queryModel.min" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
+        placeholder="Min">
     </mat-form-field>
     <mat-form-field>
-      <input matInput [(ngModel)]="queryModel.max" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)" placeholder="Max">
+      <input matInput [(ngModel)]="queryModel.max" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
+        placeholder="Max">
     </mat-form-field>
   </div>
   <mat-form-field>
@@ -21,10 +26,12 @@
     </mat-select>
   </mat-form-field>
   <button mat-raised-button type="button" color="primary" (click)="applyFilter(queryModel)">Search</button>
-  <button fxFlexOffset="auto" mat-raised-button type="button" color="primary" (click)="applyFilter(queryModel)">Refresh</button>
+  <button fxFlexOffset="auto" mat-raised-button type="button" color="primary"
+    (click)="applyFilter(queryModel)">Refresh</button>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table" (matSortChange)="sortData($event)">
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table"
+  (matSortChange)="sortData($event)">
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -48,8 +55,12 @@
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let item">
       <div class="btn-group" *ngIf="isAuth">
-          <button mat-stroked-button [routerLink]="['/product/edit', item._id]" routerLinkActive="router-link-active"><mat-icon>edit</mat-icon> Edit</button>
-          <button mat-stroked-button color="warn" (click)="delete(item)"><mat-icon>delete</mat-icon> Delete</button>
+        <button mat-stroked-button [routerLink]="['/product/edit', item._id]" routerLinkActive="router-link-active">
+          <mat-icon>edit</mat-icon> Edit
+        </button>
+        <button mat-stroked-button color="warn" (click)="delete(item)">
+          <mat-icon>delete</mat-icon> Delete
+        </button>
       </div>
     </td>
   </ng-container>
@@ -59,5 +70,3 @@
 </table>
 
 <mat-paginator [length]="totalItems" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
-
-
