--- a/ng-app/src/app/user/user-list/user-list.component.html
+++ b/ng-app/src/app/user/user-list/user-list.component.html
@@ -38,12 +38,12 @@
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let item">
       <div class="btn-group" *ngIf="isAuth">
-          <button mat-stroked-button [routerLink]="['/user/edit', item._id]" routerLinkActive="router-link-active"><mat-icon>edit</mat-icon> Edit</button>
-          <button mat-stroked-button color="warn" (click)="onLockOrUnlockUser(item)">
-            <span *ngIf="!(item.isLocked || item.isAccessFailedLocked || item.isResetPasswordLocked)"><mat-icon>lock</mat-icon> Lock</span>
-            <span *ngIf="item.isLocked || item.isAccessFailedLocked || item.isResetPasswordLocked"><mat-icon>lock_open</mat-icon> Unlock</span>
+          <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" [routerLink]="['/user/edit', item._id]" routerLinkActive="router-link-active"><mat-icon class="icon-xs">edit</mat-icon></button>
+          <button mat-icon-button [matTooltip]="(item.isLocked || item.isAccessFailedLocked || item.isResetPasswordLocked) ? 'Unlock' : 'Lock'" matTooltipPosition="above" color="warn" (click)="onLockOrUnlockUser(item)">
+            <span *ngIf="!(item.isLocked || item.isAccessFailedLocked || item.isResetPasswordLocked)"><mat-icon class="icon-xs">lock</mat-icon></span>
+            <span *ngIf="item.isLocked || item.isAccessFailedLocked || item.isResetPasswordLocked"><mat-icon class="icon-xs">lock_open</mat-icon></span>
           </button>
-          <button mat-stroked-button (click)="onResetPassword(item)"><mat-icon>report</mat-icon> Reset Password</button>
+          <button mat-icon-button matTooltip="Reset Password" matTooltipPosition="above" (click)="onResetPassword(item)"><mat-icon class="icon-xs">report</mat-icon></button>
       </div>
     </td>
   </ng-container>
