--- a/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
+++ b/ng-app/src/app/event/event-plan-list/event-plan-list.component.html
@@ -25,9 +25,9 @@
       <mat-option *ngFor="let item of filterList" [value]="item">{{ item.display }}</mat-option>
     </mat-select>
   </mat-form-field>
-  <button mat-raised-button type="button" color="primary" (click)="applyFilter(queryModel)">Search</button>
-  <button fxFlexOffset="auto" mat-raised-button type="button" color="primary"
-    (click)="applyFilter(queryModel)">Refresh</button>
+  <button mat-raised-button matTooltip="Search" matTooltipPosition="above" type="button" color="primary" (click)="applyFilter(queryModel)"><mat-icon>search</mat-icon></button>
+  <button fxFlexOffset="auto" mat-raised-button matTooltip="Refresh" matTooltipPosition="above" type="button" color="primary"
+    (click)="applyFilter(queryModel)"><mat-icon>refresh</mat-icon></button>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table"
@@ -38,8 +38,8 @@
   </ng-container>
 
   <ng-container matColumnDef="totalBudgetAmount">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Price (RM) </th>
-    <td mat-cell *matCellDef="let item"> {{item.price}} </td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Total Budget (RM) </th>
+    <td mat-cell *matCellDef="let item"> {{item.totalBudgetAmount | currency}} </td>
   </ng-container>
 
   <ng-container matColumnDef="remarks">
@@ -56,12 +56,12 @@
     <th mat-header-cell *matHeaderCellDef> Action </th>
     <td mat-cell *matCellDef="let item">
       <div class="btn-group" *ngIf="isAuth">
-        <button mat-stroked-button [routerLink]="['/event-plan/edit', item._id]" routerLinkActive="router-link-active">
-          <mat-icon>edit</mat-icon> Edit
-        </button>
-        <button mat-stroked-button color="warn" (click)="delete(item)">
-          <mat-icon>delete</mat-icon> Delete
-        </button>
+          <button mat-icon-button matTooltip="Edit" matTooltipPosition="above" [routerLink]="['/event-plan/edit', item._id]">
+            <mat-icon class="icon-xs">edit</mat-icon>
+          </button>
+          <button mat-icon-button matTooltip="Delete" matTooltipPosition="above" color="warn" (click)="delete(item)">
+            <mat-icon class="icon-xs">delete</mat-icon>
+          </button>
       </div>
     </td>
   </ng-container>
