--- a/ng-app/src/app/header/header.component.html
+++ b/ng-app/src/app/header/header.component.html
@@ -1,10 +1,7 @@
 <mat-toolbar>
-  <span class="logo" routerLink="/">Ng-Node App</span>
+  <button mat-icon-button (click)="navToggle.emit()" *ngIf="isAuth"><mat-icon>menu</mat-icon></button>
 
-  <ng-container *ngIf="isAuth">
-    <a mat-button [routerLink]="route.url" routerLinkActive="mat-primary" mat-button *ngFor="let route of routes">{{ route.name }}</a>
-    <a mat-button (click)="onLogout()">Logout</a>
-  </ng-container>
+  <span class="logo" routerLink="/">Ng-Node App</span>
 
   <ng-container *ngIf="!isAuth">
     <a routerLink="/auth/login" mat-button *ngIf="!isAuth">Login</a>
