--- a/ng-app/src/app/app.component.html
+++ b/ng-app/src/app/app.component.html
@@ -1,5 +1,19 @@
-<app-header></app-header>
+<app-header (navToggle)="snav.toggle($event)"></app-header>
 
 <div class="main-content">
-  <router-outlet></router-outlet>
+  <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened>
+      <mat-nav-list>
+        <ng-container *ngIf="isAuth">
+            <a mat-list-item [routerLink]="route.url" routerLinkActive="mat-primary" *ngFor="let route of routes">{{ route.name }}</a>
+            <a mat-list-item (click)="onLogout()">Logout</a>
+        </ng-container>
+      </mat-nav-list>
+    </mat-sidenav>
+
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
 </div>
