--- a/ng-app/src/app/header/header.component.html
+++ b/ng-app/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
   <button mat-icon-button (click)="navToggle.emit()" *ngIf="isAuth"><mat-icon>menu</mat-icon></button>
 
   <span class="logo" routerLink="/">Ng-Node App</span>
