--- a/ng-app/src/app/event/event-list/event-list.component.html
+++ b/ng-app/src/app/event/event-list/event-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  event-list works!
-</p>
+<app-standard-list domainName="event" title="Event" [columns]="columns" [filterList]="filterList"></app-standard-list>
