--- a/ng-app/src/app/standard/standard-form/standard-form.component.html
+++ b/ng-app/src/app/standard/standard-form/standard-form.component.html
@@ -9,9 +9,18 @@
         <mat-form-field *ngSwitchCase="'string'">
           <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName" [required]="field.required" />
         </mat-form-field>
+        
         <mat-form-field *ngSwitchCase="'number'">
           <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName" [required]="field.required" />
         </mat-form-field>
+
+        <mat-form-field *ngSwitchCase="'enum'">
+            <mat-label>{{ field.displayName }}</mat-label>
+            <mat-select [(ngModel)]="formData[field.name]" [name]="field.name" [required]="field.required">
+              <mat-option *ngFor="let enum of field.enumList" [value]="enum.value">{{ enum.value }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+
         <div *ngSwitchCase="'image'">
           <div class="image-picker">
               <button mat-stroked-button type="button" (click)="filePicker.click()"><mat-icon>photo</mat-icon> {{ field.displayName }}</button>
