--- a/ng-app/src/app/customer/customer-list/customer-list.component.html
+++ b/ng-app/src/app/customer/customer-list/customer-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  customer-list works!
-</p>
+<app-standard-list domainName="event" title="Event" [columns]="columns" [filterList]="filterList"></app-standard-list>
