--- a/ng-app/src/app/customer/customer-list/customer-list.component.html
+++ b/ng-app/src/app/customer/customer-list/customer-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list domainName="event" title="Event" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list domainName="customer" title="Customer" [columns]="columns" [filterList]="filterList"></app-standard-list>
