--- a/ng-app/src/app/standard/standard-form/standard-form.component.html
+++ b/ng-app/src/app/standard/standard-form/standard-form.component.html
@@ -5,11 +5,14 @@
   </mat-card-header>
   <mat-card-content>
     <form #form="ngForm" id="form" (ngSubmit)="form.valid && onSubmit()">
-      <ng-container [ngSwitch]="field.type" *ngFor="let field of fields">
+
+      <app-standard-form-field [field]="field" [(formData)]="formData" *ngFor="let field of fields"></app-standard-form-field>
+
+      <!-- <ng-container [ngSwitch]="field.type" *ngFor="let field of fields">
         <mat-form-field *ngSwitchCase="'string'">
           <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName" [required]="field.required" />
         </mat-form-field>
-        
+
         <mat-form-field *ngSwitchCase="'number'">
           <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName" [required]="field.required" />
         </mat-form-field>
@@ -32,7 +35,7 @@
               <img [src]="formData[field.name]" *ngIf="formData[field.name] && !imagePreview[field.name]">
             </div>
         </div>
-      </ng-container>
+      </ng-container> -->
 
     </form>
   </mat-card-content>
