--- a/ng-app/src/styles.css
+++ b/ng-app/src/styles.css
@@ -36,7 +36,7 @@ table { width: 100%; }
   max-width: 1200px;
 }
 
-.mat-card[class*="card-"] form > mat-form-field {
+.mat-card[class*="card-"] form mat-form-field {
   width: 100%;
 }
 
