apply sd-list and sd-form, remove event-process

--- a/ng-app/src/app/attendance/attendance-list/attendance-list.component.html
+++ b/ng-app/src/app/attendance/attendance-list/attendance-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  attendance-list works!
-</p>
+<app-standard-list title="Attendance" domainName="attendance" [columns]="columns" [filterList]="filterList"></app-standard-list>
