--- a/ng-app/src/app/attendee/attendee-group-form/attendee-group-form.component.html
+++ b/ng-app/src/app/attendee/attendee-group-form/attendee-group-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  attendee-group-form works!
-</p>
+<app-standard-form title="Attendee Group" domainName="attendee-group" [fields]="fields"></app-standard-form>
