--- a/ng-app/src/app/attendee/attendee-list/attendee-list.component.html
+++ b/ng-app/src/app/attendee/attendee-list/attendee-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  attendee-list works!
-</p>
+<app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList"></app-standard-list>
