--- a/ng-app/src/app/attendee/payment-list/payment-list.component.html
+++ b/ng-app/src/app/attendee/payment-list/payment-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  payment-list works!
-</p>
+<app-standard-list title="Payment" domainName="payment" [columns]="columns" [filterList]="filterList"></app-standard-list>
