--- a/ng-app/src/app/inventory/stock-item-form/stock-item-form.component.html
+++ b/ng-app/src/app/inventory/stock-item-form/stock-item-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  stock-item-form works!
-</p>
+<app-standard-form title="Stock Item" domainName="stock-item" [fields]="fields"></app-standard-form>
