--- a/ng-app/src/app/inventory/stock-transaction-list/stock-transaction-list.component.html
+++ b/ng-app/src/app/inventory/stock-transaction-list/stock-transaction-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  stock-transaction-list works!
-</p>
+<app-standard-list title="Stock Transaction" domainName="stock-transaction" [columns]="columns" [filterList]="filterList"></app-standard-list>
