--- a/ng-app/src/app/provider/category-list/category-list.component.html
+++ b/ng-app/src/app/provider/category-list/category-list.component.html
@@ -1,3 +1,2 @@
-<p>
-  category-list works!
-</p>
+<app-standard-list title="Category" domainName="category" [columns]="columns" [filterList]="filterList"></app-standard-list>
+
