--- a/ng-app/src/app/provider/payment-voucher-form/payment-voucher-form.component.html
+++ b/ng-app/src/app/provider/payment-voucher-form/payment-voucher-form.component.html
@@ -1,3 +1,2 @@
-<p>
-  payment-voucher-form works!
-</p>
+<app-standard-form title="Payment Voucher" domainName="payment-voucher" [fields]="fields"></app-standard-form>
+
