--- a/ng-app/src/app/provider/provider-facility-form/provider-facility-form.component.html
+++ b/ng-app/src/app/provider/provider-facility-form/provider-facility-form.component.html
@@ -1,3 +1,2 @@
-<p>
-  provider-facility-form works!
-</p>
+<app-standard-form title="Provider Facility" domainName="provider-facility" [fields]="fields"></app-standard-form>
+
