--- a/ng-app/src/app/provider/provider-facility-list/provider-facility-list.component.html
+++ b/ng-app/src/app/provider/provider-facility-list/provider-facility-list.component.html
@@ -1,3 +1,2 @@
-<p>
-  provider-facility-list works!
-</p>
+<app-standard-list title="Provider Facility" domainName="provider-facility" [columns]="columns" [filterList]="filterList"></app-standard-list>
+
