--- a/ng-app/src/app/provider/provider-list/provider-list.component.html
+++ b/ng-app/src/app/provider/provider-list/provider-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  provider-list works!
-</p>
+<app-standard-list title="Provider" domainName="provider" [columns]="columns" [filterList]="filterList"></app-standard-list>
