--- a/ng-app/src/app/provider/provider-service-form/provider-service-form.component.html
+++ b/ng-app/src/app/provider/provider-service-form/provider-service-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  provider-service-form works!
-</p>
+<app-standard-form title="Provider Service" domainName="provider-service" [fields]="fields"></app-standard-form>
