--- a/ng-app/src/app/provider/provider-service-list/provider-service-list.component.html
+++ b/ng-app/src/app/provider/provider-service-list/provider-service-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  provider-service-list works!
-</p>
+<app-standard-list title="Provider Service" domainName="provider-service" [columns]="columns" [filterList]="filterList"></app-standard-list>
