--- a/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-form/supplier-invoice-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  supplier-invoice-form works!
-</p>
+<app-standard-form title="Supplier Invoice" domainName="supplier-invoice" [fields]="fields"></app-standard-form>
