--- a/ng-app/src/app/attendance/attendance-form/attendance-form.component.html
+++ b/ng-app/src/app/attendance/attendance-form/attendance-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  attendance-form works!
-</p>
+<app-standard-form title="Attendance" domainName="attendance" [fields]="fields"></app-standard-form>
