--- a/ng-app/src/app/attendee/attendee-group-list/attendee-group-list.component.html
+++ b/ng-app/src/app/attendee/attendee-group-list/attendee-group-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  attendee-group-list works!
-</p>
+<app-standard-list title="Attendee Group" domainName="attendee-group" [columns]="columns" [filterList]="filterList"></app-standard-list>
