--- a/ng-app/src/app/customer/invoice-list/invoice-list.component.html
+++ b/ng-app/src/app/customer/invoice-list/invoice-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  invoice-list works!
-</p>
+<app-standard-list title="Invoice" domainName="invoice" [columns]="columns" [filterList]="filterList"></app-standard-list>
