--- a/ng-app/src/app/event/registration-form/registration-form.component.html
+++ b/ng-app/src/app/event/registration-form/registration-form.component.html
@@ -1,3 +1,1 @@
-<p>
-  registration-form works!
-</p>
+<app-standard-form title="Registration Form" domainName="registration-form" [fields]="fields"></app-standard-form>
