--- a/ng-app/src/app/event/registration-list/registration-list.component.html
+++ b/ng-app/src/app/event/registration-list/registration-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  registration-list works!
-</p>
+<app-standard-list title="Registration Form" domainName="registration-form" [columns]="columns" [filterList]="filterList"></app-standard-list>
