--- a/ng-app/src/app/header/header.component.html
+++ b/ng-app/src/app/header/header.component.html
@@ -5,6 +5,6 @@
 
   <ng-container *ngIf="!isAuth">
     <a routerLink="/auth/login" mat-button *ngIf="!isAuth">Login</a>
-    <a routerLink="/auth/register" mat-button *ngIf="!isAuth">Sign Up</a>
+    <!-- <a routerLink="/auth/register" mat-button *ngIf="!isAuth">Sign Up</a> -->
   </ng-container>
 </mat-toolbar>
