--- a/ng-app/src/app/inventory/stock-item-list/stock-item-list.component.html
+++ b/ng-app/src/app/inventory/stock-item-list/stock-item-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  stock-item-list works!
-</p>
+<app-standard-list title="Stock Item" domainName="stock-item" [columns]="columns" [filterList]="filterList"></app-standard-list>
