--- a/ng-app/src/app/provider/payment-voucher-list/payment-voucher-list.component.html
+++ b/ng-app/src/app/provider/payment-voucher-list/payment-voucher-list.component.html
@@ -1,3 +1,2 @@
-<p>
-  payment-voucher-list works!
-</p>
+<app-standard-list title="Payment Voucher" domainName="payment-voucher" [columns]="columns" [filterList]="filterList"></app-standard-list>
+
