--- a/ng-app/src/app/provider/receipt-list/receipt-list.component.html
+++ b/ng-app/src/app/provider/receipt-list/receipt-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  receipt-list works!
-</p>
+<app-standard-list title="Receipt" domainName="receipt" [columns]="columns" [filterList]="filterList"></app-standard-list>
