--- a/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  supplier-invoice-list works!
-</p>
+<app-standard-list title="Supplier Invoice" domainName="supplier-invoice" [columns]="columns" [filterList]="filterList"></app-standard-list>
