--- a/ng-app/src/app/app.component.html
+++ b/ng-app/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div class="main-content">
   <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened *ngIf="isAuth">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" [ngClass]="{'is-auth': isAuth}" fixedTopGap="56" opened>
       <mat-nav-list>
         <ng-container *ngIf="isAuth">
             <a mat-list-item [routerLink]="route.url" routerLinkActive="mat-primary" *ngFor="let route of routes">{{ route.name }}</a>
