--- a/ng-app/src/app/standard/standard-list/standard-list.component.html
+++ b/ng-app/src/app/standard/standard-list/standard-list.component.html
@@ -1,34 +1,10 @@
 <div class="action-group">
   <a [routerLink]="['/' + domainName + '/add']" routerLinkActive="router-link-active" mat-raised-button>
-    <mat-icon>insert_drive_file</mat-icon> {{ title }}
+    <mat-icon>insert_drive_file</mat-icon> New {{ title }}
   </a>
 </div>
 
-<div fxLayout fxLayoutAlign="start center" fxLayoutGap="10px" class="standard-filter">
-  <mat-form-field *ngIf="selectedFilter?.queryType === 'string'">
-    <input matInput [(ngModel)]="queryModel.searchText" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
-      placeholder="Filter">
-  </mat-form-field>
-  <div class="number-form-fields" *ngIf="selectedFilter?.queryType === 'number'">
-    <mat-form-field>
-      <input matInput [(ngModel)]="queryModel.min" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
-        placeholder="Min">
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput [(ngModel)]="queryModel.max" (keyup)="$event.keyCode === 13 && applyFilter(queryModel)"
-        placeholder="Max">
-    </mat-form-field>
-  </div>
-  <mat-form-field>
-    <mat-label>Type</mat-label>
-    <mat-select [(ngModel)]="selectedFilter" (valueChange)="onChangeFilter($event)">
-      <mat-option *ngFor="let item of filterList" [value]="item">{{ item.display }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <button mat-raised-button matTooltip="Search" matTooltipPosition="above" type="button" color="primary" (click)="applyFilter(queryModel)"><mat-icon>search</mat-icon></button>
-  <button fxFlexOffset="auto" mat-raised-button matTooltip="Refresh" matTooltipPosition="above" type="button" color="primary"
-    (click)="applyFilter(queryModel)"><mat-icon>refresh</mat-icon></button>
-</div>
+<app-standard-filter [filterList]="filterList" [(queryModel)]="queryModel" (refresh)="applyFilter()"></app-standard-filter>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2 standard-table"
   (matSortChange)="sortData($event)">
