--- a/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
+++ b/ng-app/src/app/standard/standard-form-field/standard-form-field.component.html
@@ -1,24 +1,61 @@
 <ng-container [ngSwitch]="field.type">
   <mat-form-field *ngSwitchCase="'string'">
-    <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
-      [required]="field.required" />
+    <input
+      matInput
+      [(ngModel)]="formData[field.name]"
+      [name]="field.name"
+      [placeholder]="field.displayName"
+      [required]="field.required"
+    />
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'textarea'">
-    <textarea matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
-    [required]="field.required"></textarea>
+    <textarea
+      matInput
+      [(ngModel)]="formData[field.name]"
+      [name]="field.name"
+      [placeholder]="field.displayName"
+      [required]="field.required"
+    ></textarea>
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'number'">
-    <input matInput [(ngModel)]="formData[field.name]" [name]="field.name" [placeholder]="field.displayName"
-      [required]="field.required" />
+    <input
+      matInput
+      [(ngModel)]="formData[field.name]"
+      [name]="field.name"
+      [placeholder]="field.displayName"
+      [required]="field.required"
+    />
   </mat-form-field>
 
   <mat-form-field *ngSwitchCase="'enum'">
     <mat-label>{{ field.displayName }}</mat-label>
-    <mat-select [(ngModel)]="formData[field.name]" [name]="field.name" [required]="field.required">
-      <mat-option *ngFor="let enum of field.enumList" [value]="enum.value">{{ enum.value }}</mat-option>
+    <mat-select
+      [(ngModel)]="formData[field.name]"
+      [name]="field.name"
+      [required]="field.required"
+    >
+      <mat-option *ngFor="let enum of field.enumList" [value]="enum.value">{{
+        enum.value
+      }}</mat-option>
     </mat-select>
+  </mat-form-field>
+
+  <mat-form-field *ngSwitchCase="'ref'">
+    <input
+      type="text"
+      matInput
+      [(ngModel)]="formData[field.name]"
+      [name]="field.name"
+      [placeholder]="field.displayName"
+      [required]="field.required"
+      [matAutocomplete]="auto"
+    />
+
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+      <mat-option *ngFor="let option of (field.refOptions)" [value]="option">{{ option[field.refName] }}</mat-option>
+    </mat-autocomplete>
   </mat-form-field>
 
   <div *ngSwitchCase="'object'">
@@ -26,33 +63,63 @@
       <mat-list-item>{{ field.displayName }}</mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
-    <app-standard-form-field [field]="objectField" [(formData)]="formData[field.name]"
-      *ngFor="let objectField of field.fields"></app-standard-form-field>
+    <app-standard-form-field
+      [field]="objectField"
+      [(formData)]="formData[field.name]"
+      *ngFor="let objectField of field.fields"
+    ></app-standard-form-field>
   </div>
 
   <div class="form-field-array" *ngSwitchCase="'array'">
-      <mat-list>
-        <mat-list-item>{{ field.displayName }} <button type="button" mat-icon-button [matTooltip]="'Add New ' + field.childName" matTooltipPosition="above" color="primary" (click)="formData[field.name].push({})"><mat-icon>add</mat-icon></button> </mat-list-item>
-        <mat-divider></mat-divider>
-      </mat-list>
-      <div *ngFor="let item of formData[field.name]; let i = index">
-        <b>{{ field.childName + ' ' + (i + 1) }}</b>
-        <app-standard-form-field [field]="objectField" [(formData)]="item" [parentField]="field"
-          *ngFor="let objectField of field.fields"></app-standard-form-field>
-      </div>
+    <mat-list>
+      <mat-list-item
+        >{{ field.displayName }}
+        <button
+          type="button"
+          mat-icon-button
+          [matTooltip]="'Add New ' + field.childName"
+          matTooltipPosition="above"
+          color="primary"
+          (click)="formData[field.name].push({})"
+        >
+          <mat-icon>add</mat-icon>
+        </button>
+      </mat-list-item>
+      <mat-divider></mat-divider>
+    </mat-list>
+    <div *ngFor="let item of formData[field.name]; let i = index">
+      <b>{{ field.childName + ' ' + (i + 1) }}</b>
+      <app-standard-form-field
+        [field]="objectField"
+        [(formData)]="item"
+        [parentField]="field"
+        *ngFor="let objectField of field.fields"
+      ></app-standard-form-field>
     </div>
+  </div>
 
   <div *ngSwitchCase="'image'">
     <div class="image-picker">
       <button mat-stroked-button type="button" (click)="filePicker.click()">
         <mat-icon>photo</mat-icon> {{ field.displayName }}
       </button>
-      <input type="file" class="input-file" #filePicker (change)="onImagePicked($event, field.name)">
+      <input
+        type="file"
+        class="input-file"
+        #filePicker
+        (change)="onImagePicked($event, field.name)"
+      />
     </div>
 
-    <div class="image-preview" *ngIf="(imagePreview !== '' && imagePreview) || formData[field.name]">
-      <img [src]="imagePreview" *ngIf="imagePreview !== '' && imagePreview">
-      <img [src]="formData[field.name]" *ngIf="formData[field.name] && !imagePreview">
+    <div
+      class="image-preview"
+      *ngIf="(imagePreview !== '' && imagePreview) || formData[field.name]"
+    >
+      <img [src]="imagePreview" *ngIf="imagePreview !== '' && imagePreview" />
+      <img
+        [src]="formData[field.name]"
+        *ngIf="formData[field.name] && !imagePreview"
+      />
     </div>
   </div>
 </ng-container>
