--- a/ng-app/src/app/inventory/stock-item-list/stock-item-list.component.html
+++ b/ng-app/src/app/inventory/stock-item-list/stock-item-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Stock Item" domainName="stock-item" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Stock Item" domainName="stock-item" [columns]="columns" [filterList]="filterList" [includes]="['category']"></app-standard-list>
