--- a/ng-app/src/app/app.component.css
+++ b/ng-app/src/app/app.component.css
@@ -12,6 +12,26 @@ mat-sidenav {
   width: 200px;
 }
 
+/* width */
+.mat-drawer-inner-container::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+.mat-drawer-inner-container::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+.mat-drawer-inner-container::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+.mat-drawer-inner-container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 mat-sidenav-content {
   padding: 0 10px;
 }
@@ -34,6 +54,8 @@ mat-sidenav-container:not(.is-auth) mat-sidenav-content {
 
 .sidenav-list-item > .nested-list-item {
   margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   border-left: 2px solid #aaa;
   overflow: hidden;
   -webkit-animation: fadein .5s; /* Safari, Chrome and Opera > 12.1 */
