--- a/ng-app/src/app/user/user-change-password/user-change-password.component.html
+++ b/ng-app/src/app/user/user-change-password/user-change-password.component.html
@@ -15,7 +15,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="primary" type="submit" form="form">
-      <mat-icon>done</mat-icon> Submit
+      <mat-icon>done</mat-icon> Update
     </button>
   </mat-card-actions>
 </mat-card>
