--- a/ng-app/src/app/attendee/attendee-form/attendee-form.component.html
+++ b/ng-app/src/app/attendee/attendee-form/attendee-form.component.html
@@ -1,1 +1,1 @@
-<app-standard-form title="Attendee" domainName="attendee" [fields]="fields"></app-standard-form>
+<app-standard-form title="Attendee" domainName="attendee" [fields]="fields" [includes]="['event','registrationForm','attendeeGroup']"></app-standard-form>
