--- a/ng-app/src/app/attendee/attendee-group-list/attendee-group-list.component.html
+++ b/ng-app/src/app/attendee/attendee-group-list/attendee-group-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Attendee Group" domainName="attendee-group" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Attendee Group" domainName="attendee-group" [columns]="columns" [filterList]="filterList" [includes]="['event']"></app-standard-list>
