--- a/ng-app/src/app/attendee/attendee-list/attendee-list.component.html
+++ b/ng-app/src/app/attendee/attendee-list/attendee-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Attendee" domainName="attendee" [columns]="columns" [filterList]="filterList" [includes]="['attendeeGroup']"></app-standard-list>
