--- a/ng-app/src/app/event/event-list/event-list.component.html
+++ b/ng-app/src/app/event/event-list/event-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list domainName="event" title="Event" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list domainName="event" title="Event" [columns]="columns" [filterList]="filterList" [actions]="actions"></app-standard-list>
