--- a/ng-app/src/app/provider/payment-voucher-list/payment-voucher-list.component.html
+++ b/ng-app/src/app/provider/payment-voucher-list/payment-voucher-list.component.html
@@ -1,2 +1,2 @@
-<app-standard-list title="Payment Voucher" domainName="payment-voucher" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Payment Voucher" domainName="payment-voucher" [columns]="columns" [filterList]="filterList" [includes]="['provider']"></app-standard-list>
 
