--- a/ng-app/src/app/provider/receipt-list/receipt-list.component.html
+++ b/ng-app/src/app/provider/receipt-list/receipt-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Receipt" domainName="receipt" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Receipt" domainName="receipt" [columns]="columns" [filterList]="filterList" [includes]="['provider','supplierInvoice']"></app-standard-list>
