--- a/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
+++ b/ng-app/src/app/provider/supplier-invoice-list/supplier-invoice-list.component.html
@@ -1,1 +1,1 @@
-<app-standard-list title="Supplier Invoice" domainName="supplier-invoice" [columns]="columns" [filterList]="filterList"></app-standard-list>
+<app-standard-list title="Supplier Invoice" domainName="supplier-invoice" [columns]="columns" [filterList]="filterList" [includes]="['provider','supplierInvoice']"></app-standard-list>
