--- a/ng-app/src/app/event/event-view/event-view.component.html
+++ b/ng-app/src/app/event/event-view/event-view.component.html
@@ -50,24 +50,24 @@
           </mat-expansion-panel-header>
 
           <div class="view-field">
-            <h3>Services <a mat-icon-button><mat-icon>add</mat-icon></a></h3>
-            <p *ngIf="formData.services.length === 0">No service yet.</p>
-            <ng-container *ngIf="formData.services.length > 0">
-                <p *ngFor="let service of formData.services"> {{ service.name }} </p>
+            <h3>Services <a mat-icon-button (click)="addItemToEvent('providerService', 'services')"><mat-icon>add</mat-icon></a></h3>
+            <p *ngIf="formData.services && formData.services.length === 0">No service yet.</p>
+            <ng-container *ngIf="formData.services && formData.services.length > 0">
+                <p *ngFor="let service of formData.services"> {{ service?.providerService?.name }} </p>
             </ng-container>
           </div>
           <div class="view-field">
-            <h3>Facilities <a mat-icon-button><mat-icon>add</mat-icon></a></h3>
-            <p *ngIf="formData.facilities.length === 0">No facility yet.</p>
-            <ng-container *ngIf="formData.services.length > 0">
-                <p *ngFor="let facility of formData.facilities"> {{ facility.name }} </p>
+            <h3>Facilities <a mat-icon-button (click)="addItemToEvent('providerFacility', 'facilities')"><mat-icon>add</mat-icon></a></h3>
+            <p *ngIf="formData.facilities && formData.facilities.length === 0">No facility yet.</p>
+            <ng-container *ngIf="formData.facilities && formData.facilities.length > 0">
+                <p *ngFor="let facility of formData.facilities"> {{ facility?.providerFacility?.name }} </p>
             </ng-container>
           </div>
           <div class="view-field">
             <h3>Stock Items <a mat-icon-button><mat-icon>add</mat-icon></a></h3>
-            <p *ngIf="formData.stockItems.length === 0">No stock item yet.</p>
-            <ng-container *ngIf="formData.stockItem.length > 0">
-                <p *ngFor="let stockItem of formData.stockItems"> {{ stockItem.name }} </p>
+            <p *ngIf="formData.stockItems && formData.stockItems.length === 0">No stock item yet.</p>
+            <ng-container *ngIf="formData.stockItems && formData.stockItems.length > 0">
+                <p *ngFor="let stockItem of formData.stockItems"> {{ stockItem?.name }} </p>
             </ng-container>
           </div>
 
