--- a/ng-app/src/app/standard/standard-form/standard-form.component.html
+++ b/ng-app/src/app/standard/standard-form/standard-form.component.html
@@ -9,7 +9,7 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button [routerLink]="['/' + domainName + '/list']" type="button"><mat-icon>arrow_back_ios</mat-icon> Cancel</button>
+    <button mat-raised-button type="button" (click)="onCancel('/' + domainName + '/list')"><mat-icon>arrow_back_ios</mat-icon> Cancel</button>
     <button mat-raised-button color="primary" type="submit" form="form"><mat-icon>done</mat-icon> Submit</button>
   </mat-card-actions>
 </mat-card>
